# swiftqr

./: README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile.backend
backend/src/: handlers.rs  main.rs  middleware.rs  models.rs  qr_generator.rs
db/: schema.sql
frontend/: Dockerfile.frontend  package.json
frontend/src/: app.css  app.tsx
frontend/src/components/: Footer.tsx  Header.tsx
frontend/src/routes/: Home.tsx  doc.tsx  index.tsx  payment-success.tsx
nginx/: Dockerfile.nginx  nginx.conf
